# PaNuAPardisoImplementation

./: CMakeLists.txt  README.md  main.cpp  pardiso_solver.cpp  pardiso_solver.h
